--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,20 @@ autopep8==1.4.4
 backcall==0.1.0
 bcrypt==3.1.6
 behave==1.2.6
+certifi==2019.3.9
 cffi==1.12.2
+chardet==3.0.4
+Click==7.0
 coverage==4.5.3
 cryptography==2.6.1
 decorator==4.4.0
 dictdiffer==0.8.0
 filelock==3.0.10
+Flask==1.0.2
+idna==2.8
 ipython==7.4.0
 ipython-genutils==0.2.0
+itsdangerous==1.1.0
 jedi==0.13.3
 Jinja2==2.10.1
 libyang==0.16.78
@@ -29,16 +35,20 @@ pickleshare==0.7.5
 pluggy==0.11.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
-py==1.8.0
+pyang==1.7.8
 pyasn1==0.4.5
 pycodestyle==2.5.0
 pycparser==2.19
 pyflakes==2.1.1
 Pygments==2.3.1
 PyNaCl==1.3.0
+pytz==2019.1
+requests==2.21.0
 six==1.12.0
 toml==0.10.0
 tox==3.9.0
 traitlets==4.3.2
 virtualenv==16.5.0
+urllib3==1.24.3
 wcwidth==0.1.7
+Werkzeug==0.15.2
