Basic start of providing jinja2 templates.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,12 +29,10 @@ RUN \
 ADD artefacts /
 
 RUN \
-      pip3 install flask jinja2
-RUN \
       python3 /get-pip.py && \
       rm -f /get-pip.py && \
       pip3 install mock coverage nose2 autopep8  && \
-      pip3 install lxml jinja2 dictdiffer
+      pip3 install lxml jinja2 dictdiffer flask
 
 
 
