--- a/requirements.txt
+++ b/requirements.txt
@@ -4,27 +4,28 @@ autopep8==1.4.4
 backcall==0.1.0
 bcrypt==3.1.6
 behave==1.2.6
-certifi==2019.3.9
 cffi==1.12.2
-chardet==3.0.4
 Click==7.0
 coverage==4.5.3
 cryptography==2.6.1
 decorator==4.4.0
 dictdiffer==0.8.0
+entrypoints==0.3
 filelock==3.0.10
-Flask==1.0.2
-idna==2.8
+Flask==1.0.3
+idna==2.6
 ipython==7.4.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.13.3
 Jinja2==2.10.1
-libyang==0.16.78
+keyring==17.1.1
+keyrings.alt==3.1.1
 lxml==4.3.3
 MarkupSafe==1.1.1
 mock==2.0.0
 ncclient==0.6.4
+nose2==0.9.1
 paramiko==2.4.2
 parse==1.12.0
 parse-type==0.4.2
@@ -35,20 +36,22 @@ pickleshare==0.7.5
 pluggy==0.11.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
-pyang==1.7.8
+py==1.8.0
 pyasn1==0.4.5
 pycodestyle==2.5.0
 pycparser==2.19
+pycrypto==2.6.1
 pyflakes==2.1.1
 Pygments==2.3.1
+PyGObject==3.32.0
 PyNaCl==1.3.0
-pytz==2019.1
-requests==2.21.0
+pyxdg==0.25
+SecretStorage==2.3.1
 six==1.12.0
 toml==0.10.0
 tox==3.9.0
 traitlets==4.3.2
 virtualenv==16.5.0
-urllib3==1.24.3
 wcwidth==0.1.7
-Werkzeug==0.15.2
+Werkzeug==0.15.4
+yangvoodoo==0.0.3
