--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 appnope==0.1.0
 asn1crypto==0.24.0
 astroid==2.2.5
+attrs==19.1.0
 autopep8==1.4.4
 backcall==0.1.0
 bcrypt==3.1.7
 behave==1.2.6
+bleach==3.1.0
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
@@ -14,6 +16,7 @@ coverage==4.5.3
 coveralls==1.8.1
 cryptography==2.8
 decorator==4.4.0
+defusedxml==0.6.0
 dictdiffer==0.8.0
 dill==0.2.9
 docopt==0.6.2
@@ -24,21 +27,34 @@ flake8-polyfill==1.0.2
 future==0.17.1
 idna==2.8
 immutables==0.9
+ipykernel==5.1.1
 ipython==7.4.0
 ipython-genutils==0.2.0
+ipywidgets==7.4.2
 isort==4.3.20
 jedi==0.13.3
 Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.5.0
 lazy-object-proxy==1.4.1
 lxml==4.4.1
 mando==0.6.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mistune==0.8.4
 mock==2.0.0
+nbconvert==5.5.0
+nbformat==4.4.0
 ncclient==0.6.4
 netconf-console==2.1.1
 nose2==0.9.1
 paramiko==2.6.0
+notebook==5.7.8
+pandocfilters==1.4.2
+paramiko==2.4.2
 parse==1.12.0
 parse-type==0.4.2
 parso==0.4.0
@@ -46,6 +62,7 @@ pbr==5.2.0
 pexpect==4.7.0
 pickleshare==0.7.5
 pluggy==0.11.0
+prometheus-client==0.7.1
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 py==1.8.0
@@ -59,22 +76,32 @@ Pygments==2.3.1
 pylint==2.3.1
 PyNaCl==1.3.0
 Pyro4==4.75
+pyrsistent==0.15.2
+python-dateutil==2.8.0
 python-jsonrpc-server==0.1.2
 python-language-server==0.26.1
 PyYAML==4.2b4
+pyzmq==18.0.2
+qtconsole==4.5.1
 radon==2.4.0
 requests==2.22.0
 rope==0.14.0
+Send2Trash==1.5.0
 serpent==1.28
 six==1.12.0
 snowballstemmer==1.2.1
+terminado==0.8.2
+testpath==0.4.2
 toml==0.10.0
+tornado==6.0.3
 tox==3.9.0
 traitlets==4.3.2
 typed-ast==1.4.0
 urllib3==1.25.3
 virtualenv==16.5.0
 wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
 wrapt==1.11.2
 xenon==0.5.5
 yapf==0.27.0
