--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,6 @@ parso==0.4.0
 pbr==5.2.0
 pexpect==4.7.0
 pickleshare==0.7.5
-pluggy==0.11.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 py==1.8.0
@@ -63,6 +62,7 @@ python-jsonrpc-server==0.1.2
 python-language-server==0.26.1
 PyYAML==4.2b4
 radon==2.4.0
+redis==3.2.1
 requests==2.22.0
 rope==0.14.0
 serpent==1.28
