--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.0
 asn1crypto==0.24.0
 astroid==2.2.5
+atomicwrites==1.3.0
 attrs==19.1.0
 autopep8==1.4.4
 backcall==0.1.0
@@ -28,6 +29,7 @@ future==0.17.1
 idna==2.8
 immutables==0.9
 ipykernel==5.1.1
+importlib-metadata==0.18
 ipython==7.4.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
@@ -48,6 +50,7 @@ mistune==0.8.4
 mock==2.0.0
 nbconvert==5.5.0
 nbformat==4.4.0
+more-itertools==7.2.0
 ncclient==0.6.4
 netconf-console==2.1.1
 nose2==0.9.1
@@ -78,6 +81,11 @@ PyNaCl==1.3.0
 Pyro4==4.75
 pyrsistent==0.15.2
 python-dateutil==2.8.0
+pytest==5.0.1
+pytest-clarity==0.2.0a1
+pytest-cov==2.7.1
+pytest-cover==3.0.0
+pytest-coverage==0.0
 python-jsonrpc-server==0.1.2
 python-language-server==0.26.1
 PyYAML==4.2b4
@@ -92,6 +100,7 @@ six==1.12.0
 snowballstemmer==1.2.1
 terminado==0.8.2
 testpath==0.4.2
+termcolor==1.1.0
 toml==0.10.0
 tornado==6.0.3
 tox==3.9.0
@@ -105,3 +114,4 @@ widgetsnbextension==3.4.2
 wrapt==1.11.2
 xenon==0.5.5
 yapf==0.27.0
+zipp==0.5.2
