--- a/requirements.txt
+++ b/requirements.txt
@@ -86,6 +86,7 @@ pytest-clarity==0.2.0a1
 pytest-cov==2.7.1
 pytest-cover==3.0.0
 pytest-coverage==0.0
+pytest==5.3.2
 python-jsonrpc-server==0.1.2
 python-language-server==0.26.1
 PyYAML==4.2b4
